tests/baselines/reference/exportSpecifierAndExportedMemberDeclaration(strict=true).errors.txt
exportSpecifierAndExportedMemberDeclaration.ts(5,14): error TS7010: 'Y', which lacks return-type annotation, implicitly has an 'any' return type.


==== exportSpecifierAndExportedMemberDeclaration.ts (1 errors) ====
    declare module "m2" {
        export module X {
            interface I { }
        }
        function Y();
                 ~
!!! error TS7010: 'Y', which lacks return-type annotation, implicitly has an 'any' return type.
        export { Y as X };
        function Z(): X.I;
    }
    
    declare module "m2" {
        function Z2(): X.I;
    }